--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "firebase": "^8.3.2",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
