--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "dotenv": "^8.2.0",
     "firebase": "^8.3.2",
     "react": "^17.0.2",
+    "react-beforeunload": "^2.4.0",
     "react-color": "^2.19.3",
+    "react-countdown-circle-timer": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-responsive-masonry": "^2.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-speech": "^1.0.2",
     "recharts": "^2.0.9"
   },
   "scripts": {
