--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "doan-cn",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://minhtai189.github.io/doanchuyennganh",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -31,9 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
